<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.unam.deapassignment01w02.ConfirmacionDatos">
    
    <TextView
        android:id="@+id/tituloConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/texto_titulo_confirmacion"
        android:layout_marginLeft="@dimen/distancia_titulo_confirmacion_left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/letreroNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letrero_nombre_confirmacion"
            android:textStyle="bold"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"/>
        <TextView
            android:id="@+id/outputNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_confirmacion"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"
            android:layout_marginLeft="@dimen/distancia_letreros_TV_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/letrerofecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letrero_fecha_nacimiento"
            android:textStyle="bold"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"/>
        <TextView
            android:id="@+id/outputFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"
            android:layout_marginLeft="@dimen/distancia_letreros_TV_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/letreroTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letrero_telefono_confirmacion"
            android:textStyle="bold"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"/>
        <TextView
            android:id="@+id/outputTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_confirmacion"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"
            android:layout_marginLeft="@dimen/distancia_letreros_TV_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/letreroEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letrero_email_confirmacion"
            android:textStyle="bold"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"/>
        <TextView
            android:id="@+id/outputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_confirmacion"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"
            android:layout_marginLeft="@dimen/distancia_letreros_TV_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/letreroDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letrero_descripcion_confirmacion"
            android:textStyle="bold"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"/>
        <TextView
            android:id="@+id/outputDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_confirmacion"
            android:textSize="@dimen/texto_TV"
            android:layout_marginTop="@dimen/distancia_TV_top"
            android:layout_marginLeft="@dimen/distancia_letreros_TV_left"/>
    </LinearLayout>

    <Button
        android:id="@+id/botonEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar"
        android:layout_marginTop="@dimen/distancia_boton_editar"
        android:textStyle="bold"
        android:textSize="@dimen/texto_botones"/>

</LinearLayout>
